--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -81,6 +81,18 @@
   outline: 2px solid white;
   list-style: none;
 }
+.nav-profile-dropdown li{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.nav-profile-dropdown img{
+  width: 20px;
+}
+.nav-profile-dropdown li:hover{
+  color:  rgb(15, 181, 187);
+}
 /* responsiveness */
 @media (max-width:1050px) {
     .navbar .logo{
